[tool.poetry]
name = "noneprompt"
version = "0.1.3"
description = "Prompt toolkit for console interaction"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/noneprompt"
repository = "https://github.com/nonebot/noneprompt"
documentation = "https://github.com/nonebot/noneprompt"
keywords = ["prompt", "inquirer", "prompt-toolkit"]
include = ["noneprompt/py.typed"]

[tool.poetry.dependencies]
python = "^3.7.3"
prompt-toolkit = "^3.0.19"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
nonemoji = "^0.1.0"
pre-commit = "^2.16.0"

[tool.poetry.scripts]
noneprompt = "noneprompt.__main__:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
