[project]
name = "noneprompt"
version = "0.1.9"
description = "Prompt toolkit for console interaction"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
license = "MIT"
readme = "README.md"
keywords = ["prompt", "inquirer", "prompt-toolkit"]
requires-python = ">=3.9, <4.0"
dependencies = ["prompt-toolkit >=3.0.19, <4.0.0"]

[project.urls]
homepage = "https://github.com/nonebot/noneprompt"
repository = "https://github.com/nonebot/noneprompt"
documentation = "https://github.com/nonebot/noneprompt"

[project.scripts]
noneprompt = "noneprompt.__main__:main"

[tool.poetry]
include = ["noneprompt/py.typed"]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.9"
pythonPlatform = "All"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
